fix wrapping'

--- a/client/src/assets/css/Home.css
+++ b/client/src/assets/css/Home.css
@@ -24,21 +24,37 @@
 
 .homepage-categories {
   display: flex;
-  justify-content: space-between;
   gap: 20px;
   height: 35px;
+  flex-wrap: nowrap;
 }
 
-.search-bar {
+.search-bar-homepage {
   grid-column: span 4;
   display: flex;
   align-items: center;
 }
 
 @media screen and (max-width: 1290px) and (min-width: 200px) {
-  .search-bar {
+  .search-bar-homepage {
     grid-column: span 8;
   }
+}
+
+.search-bar-category {
+  grid-column: span 12;
+  display: flex;
+  align-items: center;
+}
+
+@media screen and (max-width: 1290px) and (min-width: 200px) {
+  .search-bar-category {
+    grid-column: span 12;
+  }
+}
+
+.category-text {
+  padding-bottom: 5px;
 }
 
 .search-input {
